--- a/PaymentClient/src/app/paymentform.Component.html
+++ b/PaymentClient/src/app/paymentform.Component.html
@@ -20,7 +20,9 @@
 
         <select id="type" style="padding-left:2px" name="paymenttype" value="" #p>
             <option selected disabled>Choose a payment type...</option>
-            <option value="BKT">Internal Account transfer</option>           
+            <option value="BKT">Internal Account transfer</option>     
+            <option value="BKT">External Account transfer</option>   
+            <option value="BKL">Salary</option>   
         </select>
         
 
