--- a/PaymentClient/src/app/paymentform.Component.html
+++ b/PaymentClient/src/app/paymentform.Component.html
@@ -25,8 +25,17 @@
             <option value="BKL">Salary</option>   
         </select>
         
+        <select id="type" style="padding-left:2px" name="beneficiarytype" value="" #bt>
+            <option selected disabled>Choose beneficiary type...</option>
+            <option value="ACC">Account number</option>
+            <option value="NKC">CPR number</option>
+            <option value="NKV">CVR number</option>
+            <option value="NKP">Production unit no.</option>
+            <option value="NKR">CVR with SE number</option>
+            <option value="NKS">SE number</option>
+        </select>
 
-        <input type="button" value="Create Payment" (click)="CreateP(u.value,a.value,f.value,t.value,b.value,p.value)">
+        <input type="button" value="Create Payment" (click)="CreateP(u.value,a.value,f.value,t.value,b.value,p.value,bt.value)">
     </form>
 </div>
 <div *ngIf="Show">
