--- a/PaymentClient/src/app/app.component.html
+++ b/PaymentClient/src/app/app.component.html
@@ -1,4 +1,4 @@
-﻿<header style="background-color:#483D8B;border-radius:4px">
+﻿<header style="background-color:#369;border-radius:4px">
     <a routerLink="/CreatePayment" style="color:white">Create Payemnt</a>
     <a routerLink="/ListPayment" style="color:white">List of Outgoing Payment</a>
     <a routerLink="/Transfer" style="color:white">Transfer Internal</a>
