--- a/PaymentClient/src/styles.css
+++ b/PaymentClient/src/styles.css
@@ -15,7 +15,7 @@ input[type=text], select {
 
 input[type=button] {
     width: 100%;
-    background-color: #1874CD;
+    background-color: #369;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -52,9 +52,10 @@ th, td {
 }
 
 tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(odd){background-color: #f2f2f2}
 
 th {
-    background-color: #1874CD;
+    background-color: #369;
     color: white;
 }
 a {
